// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> renderes bold 1`] = `
.c0 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  color: hsl(0,0%,10%);
  font-size: 16px;
  font-weight: 600;
  text-transform: none;
  font-style: normal;
}

<span
  className="c0"
/>
`;

exports[`<Text /> renders default 1`] = `
.c0 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  color: hsl(0,0%,10%);
  font-size: 16px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
}

<span
  className="c0"
/>
`;

exports[`<Text /> renders italic 1`] = `
.c0 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  color: hsl(0,0%,10%);
  font-size: 16px;
  font-weight: 400;
  text-transform: none;
  font-style: italic;
}

<span
  className="c0"
/>
`;

exports[`<Text /> renders large 1`] = `
.c0 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  color: hsl(0,0%,10%);
  font-size: 22px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
}

<span
  className="c0"
/>
`;
